Updating spacing issues

--- a/newSite/src/components/ContactUs.scss
+++ b/newSite/src/components/ContactUs.scss
@@ -23,6 +23,10 @@
   p {
     text-align: center;
     margin-top: 5vw;
+
+    img {
+      margin-right: 4vw;
+    }
   }
 
   .bg-container {
